# gen_parquet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-wheel.yml
examples/: mixed_100x40.txt  mixed_100x40.yaml  mixed_100x40_expression_logic.yaml
scripts/: add_calculated_columns.py  convert_txt_to_parquet.py  generate_type_yamls.py
src/gen_parquet/: __init__.py  cli.py  core.py  expressions.py  mcp_server.py  mcp_tools.py
tests/: test_core.py
