[project]
name = "gen-parquet"
version = "0.1.0"
description = "Utilities for generating Parquet datasets."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
]

[project.scripts]
gen-parquet = "gen_parquet.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
